Test Scripts are improved adding button IDs instead of xpath where ID is available.

--- a/src/test/resources/exp.properties
+++ b/src/test/resources/exp.properties
@@ -3,33 +3,40 @@
 # Modified by Eroma on 10/27/14.
 ####################################################################################
 
-pga.username = <PGA user>
-pga.password = <PGA user password>
+# PGA 'Username' and 'Password' for gateway login
+#************************************************
+pga.username = Eroma2016
+pga.password = !Eroma2016!
+
+# PGA 'Username' and 'Password' for gateway login
+#************************************************
+new.pga.username = TestLogin100
+new.pga.password = !TestLogin100!
 
 #'Project Name' & 'Project Description' used in creating, searching for the project. This 'Project' is also referred when creating experiments.
 #**********************************************************************************************************************************************#
-project.name = <Project name>
-project.description = <PGA project description>
+project.name = May_18_Experiments
+project.description = Selenium Test Project
 
 # Common Part of the Experiment name. Hint: for your ease this part could be your name; unique value to search for
 #*****************************************************************************************************************#
-experiment.name = <Prefix to the Exp Name>
-email1 = <email 1 for job notifications>
-email2 = <email 2 for job notifications>
+experiment.name = SLM2-
+email1 = eroma.abeysinghe@gmail.com
+email2 = pamidigs@iu.edu
 
 # Common path of the local file path where application input files exists
 #************************************************************************#
-local.path = <local path for Application Inputs>
+local.path = /Users/Eroma/Documents/Eroma-Lab/Airavata_PGA_Application_Inputs
 
 # PGA gateway Base URL Path
 #**************************#
-base.url = https://seagrid.org/
+base.url = https://dev.seagrid.org/
 # https://seagrid.org/
 # https://testdrive.airavata.org/
-# https://seagrid.org/
-# https://dev.testdrive.airavata.org/
 # https://dev.seagrid.org/
+# https://dev.testdrive.airavata.org/
 
 # PGA gateway Sub URL
 #********************#
 sub.url = home
+
