Removed properties from the file and added descriptions for the properties required

--- a/src/test/resources/exp.properties
+++ b/src/test/resources/exp.properties
@@ -5,28 +5,28 @@
 
 # PGA 'Username' and 'Password' for gateway login
 #************************************************
-pga.username = Eroma2016
-pga.password = !Eroma2016!
+pga.username = <PGA User login>
+pga.password = <PGA User password>
 
 # PGA 'Username' and 'Password' for gateway login
 #************************************************
-new.pga.username = TestLogin100
-new.pga.password = !TestLogin100!
+new.pga.username = <Username for new account creation>
+new.pga.password = <Password for new  user account>
 
 #'Project Name' & 'Project Description' used in creating, searching for the project. This 'Project' is also referred when creating experiments.
 #**********************************************************************************************************************************************#
-project.name = May_18_Experiments
-project.description = Selenium Test Project
+project.name = <PGA project name>
+project.description = <PGA project description>
 
 # Common Part of the Experiment name. Hint: for your ease this part could be your name; unique value to search for
 #*****************************************************************************************************************#
-experiment.name = SLM2-
-email1 = eroma.abeysinghe@gmail.com
-email2 = pamidigs@iu.edu
+experiment.name = SLM1-
+email1 = <Email1 for job notifications>
+email2 = <Email1 for job notifications>
 
 # Common path of the local file path where application input files exists
 #************************************************************************#
-local.path = /Users/Eroma/Documents/Eroma-Lab/Airavata_PGA_Application_Inputs
+local.path =<local directory path for application inputs>
 
 # PGA gateway Base URL Path
 #**************************#
