Removed properties from the file and added descriptions for the properties required

--- a/src/test/resources/exp.properties
+++ b/src/test/resources/exp.properties
@@ -1,6 +1,7 @@
 #############Properties Required for Executing Test Scripts#########################
 # Created by Eroma on 9/16/14.
 # Modified by Eroma on 10/27/14.
+# Modified by Eroma on 05/18/16.
 ####################################################################################
 
 # PGA 'Username' and 'Password' for gateway login
